--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <div id="container">
         <div id="header">
             <div>
-            <div>
+            <div class="header-content">
                 <img src="/assets/images/hero.png" alt="anshul">
             </div>
-            <div>
+            <div class="header-content">
                 <h2>ANSHUL KUMAR YADAV</h2>
                 <h4>SOFTWARE DEVELOPER</h4>
             </div>
@@ -48,7 +48,7 @@
         </div>
         <div id="containt">
             <div style="padding-left: 20px;">
-                <div>
+                <div class="details">
                     <h3><u>My Contact</u></h3>
                     <div class="contact-details">
                         <i class="fa-solid fa-envelope"></i>
@@ -75,7 +75,7 @@
                         <a href="https://github.com/AnshulKumarYadav">AnshulKumarYadav</a>
                     </div>
                 </div>
-                <div>
+                <div class="details">
                     <h3><u>Technical Skills</u></h3>
                     <ul>
                         <li>Java, JavaScript</li>
@@ -87,7 +87,7 @@
                         <li>Git,GitHub</li>
                     </ul>
                 </div>
-                <div>
+                <div class="details">
                     <h3><u>Soft Skills</u></h3>
                     <ul>
                        <li>Team Work</li>
@@ -96,7 +96,7 @@
                        <li>Decision Making</li>
                     </ul>
                 </div>
-                <div>
+                <div class="details">
                     <h3><u>Education Background</u></h3>
                     <div id="education">
                         <div style="height: 250px">
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="details">
                     <h3><u>Interest & Hobbies</u></h3>
                     <ul>
                        <li>Playing Cricket</li>
